@@ -37,12 +37,13 @@ extern uint64_t AudioGetDelay(void);	///< get current audio delay
 extern void AudioSetClock(int64_t);	///< set audio clock base
 extern int64_t AudioGetClock();		///< get current audio clock
 extern void AudioSetVolume(int);	///< set volume
-extern int AudioSetup(int *, int *);	///< setup audio output
+extern int AudioSetup(int *, int *, int);	///< setup audio output
 
 //extern void AudioPlay(void);		///< play audio
 //extern void AudioPause(void);		///< pause audio
 
 extern void AudioSetDevice(const char *);	///< set PCM audio device
+extern void AudioSetDeviceAC3(const char *);	///< set Passthrough device
 extern void AudioInit(void);		///< setup audio module
 extern void AudioExit(void);		///< cleanup and exit audio module
 
